# DissDjango

./: db.sqlite3  manage.py  pyproject.toml  requirements.txt
dissdjango/: asgi.py  settings.py  urls.py  wsgi.py
sim/: asgi.py  auctions.py  doubly_linked_list.py  limit_order_book.py  routing.py  urls.py  views.py  websocket_consumers.py
sim/templates/sim/: join_page.html  room_page.html  sim_page_cda.html  sim_page_dutch.html  sim_page_english.html  sim_page_fpsb.html  sim_page_spsb.html  styles.css
