[tool.poetry]
name = "dissdjango"
version = "0.1.0"
description = "Gabriel Donnan's Dissertation Project @ University of Bristol 2024"
authors = ["Gabriel Donnan"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^5.0.7"
channels = "^4.1.0"
daphne = "^4.1.2"
numpy = "^2.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
